fatura ekleme komple kaldirildi

--- a/index.html
+++ b/index.html
@@ -323,26 +323,6 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
   </div>
 </div>
 
-<!-- FATURA MODAL -->
-<div class="overlay" id="fatura-modal">
-  <div class="modal" style="max-width:580px;max-height:92vh;overflow-y:auto;padding:20px">
-    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:14px">
-      <h3 style="margin:0;font-size:16px">🧾 Fatura / İrsaliye Yükle</h3>
-      <button onclick="closeFaturaModal()" style="background:none;border:none;font-size:22px;cursor:pointer;color:#aaa;line-height:1">✕</button>
-    </div>
-    <div style="font-size:12px;color:#aaa;margin-bottom:10px">Fatura veya e-İrsaliye metnini yapıştırın ya da fotoğraf yükleyin.</div>
-    <div style="margin-bottom:10px;display:flex;gap:8px;flex-wrap:wrap">
-      <label style="flex:1;min-width:140px;padding:10px;background:#f0eaf6;border:2px dashed #8e44ad;border-radius:10px;text-align:center;cursor:pointer;font-size:13px;font-weight:700;color:#8e44ad">
-        📷 Fotoğraf / Dosya Seç
-        <input type="file" accept="image/*" capture="environment" id="fatura-foto" style="display:none" onchange="faturaFotoOku(this)">
-      </label>
-      <div id="fatura-ocr-status" style="flex:1;min-width:140px;padding:10px;background:#f8f8f8;border-radius:10px;font-size:12px;color:#aaa;display:flex;align-items:center;justify-content:center">Fotoğraf seçilmedi</div>
-    </div>
-    <textarea id="fatura-text" rows="8" style="width:100%;padding:10px;border:2px solid #eee;border-radius:8px;font-size:11px;font-family:monospace;resize:vertical;outline:none;margin-bottom:10px" placeholder="Fatura veya e-İrsaliye metnini buraya yapıştırın..." onfocus="this.style.borderColor='#8e44ad'" onblur="this.style.borderColor='#eee'"></textarea>
-    <button onclick="analizFatura()" style="width:100%;padding:12px;background:#8e44ad;color:#fff;border:none;border-radius:10px;font-size:14px;font-weight:700;cursor:pointer;margin-bottom:12px">Analiz Et →</button>
-    <div id="fatura-sonuc"></div>
-  </div>
-</div>
 
 <div class="overlay" id="rename-modal">  <div class="modal">
     <h3>Ürün Adını Değiştir</h3>
@@ -731,149 +711,8 @@ async function faturaFotoOku(input){
     status.style.color='#e74c3c';
   }
 }
-function openFaturaModal(){document.getElementById('fatura-modal').classList.add('show');document.getElementById('fatura-sonuc').innerHTML='';document.getElementById('fatura-text').value='';}
-function closeFaturaModal(){document.getElementById('fatura-modal').classList.remove('show');}
-function parseFaturaLines(text){
-  const results=[];
-  const lines=text.split('\n');
-  const tarihM=text.match(/(\d{1,2})[.\/-](\d{1,2})[.\/-](\d{4})/);
-  const tarih=tarihM?`${tarihM[3]}-${tarihM[2].padStart(2,'0')}-${tarihM[1].padStart(2,'0')}`:new Date().toISOString().slice(0,10);
-  lines.forEach(line=>{
-    const l=line.trim();
-    if(!l||l.length<5)return;
-    // Nevada e-İrsaliye: "1  25.01EC.E18.0002  BURGER KÖFTESİ 120GR (1 Koli = 20,5 KG)  20,5"
-    const nevM=l.match(/^\d+\s+[\w.]+\s+(.+?)\s+([\d.,]+)\s*$/);
-    if(nevM){const miktar=parseFloat(nevM[2].replace(',','.'));if(miktar>0){const birim=/kg|kilo/i.test(nevM[1])?'Kg':/lt|litre/i.test(nevM[1])?'Lt':'Adet';results.push({ad:nevM[1].trim().toUpperCase(),miktar,birim,tarih});return;}}
-    // Obaşak e-İrsaliye: "1  ST477  MİNİ JOKER 85 GRAM  144 Adet"
-    const obasM=l.match(/^\d+\s+[A-Z]+\d+\s+(.+?)\s+(\d+)\s+Adet\s*$/i);
-    if(obasM){const miktar=parseInt(obasM[2]);if(miktar>0){results.push({ad:obasM[1].trim().toUpperCase(),miktar,birim:'Adet',tarih});return;}}
-    // Uludağ e-İrsaliye: "BARKOD  ÜRÜNKODU  LİMONATA 33CL PET 24TV  1,00  Koli  885,95 ..."
-    const uldM=l.match(/^[A-Z0-9]+\s+[A-Z0-9]+\s+(.+?)\s+([\d.,]+)\s+Koli\b/i);
-    if(uldM){
-      const ad=uldM[1].trim().toUpperCase();
-      const koli=parseFloat(uldM[2].replace(',','.'));
-      let ici=24;
-      const tvM=ad.match(/(\d+)TV/i);if(tvM)ici=parseInt(tvM[1]);
-      const bsM=ad.match(/(\d+)BSX(\d+)/i);if(bsM)ici=parseInt(bsM[1])*parseInt(bsM[2]);
-      const miktar=Math.round(koli*ici);
-      results.push({ad,miktar,birim:'Adet',tarih});return;
-    }
-    // Coca-Cola e-İrsaliye: "AÇIKLAMA  7  Koli  24  168" → son sayı = toplam adet
-    const colaM=l.match(/^(.+?)\s{2,}(\d+)\s+Koli\s+(\d+)\s+(\d+)\s*$/i);
-    if(colaM){const miktar=parseInt(colaM[4]);results.push({ad:colaM[1].trim().toUpperCase(),miktar,birim:'Adet',tarih});return;}
-    // Eski Cola format (toplam sütunu yok): "ÜRÜN ADI   7   Koli   12"
-    const colaM2=l.match(/^(.+?)\s{2,}(\d+)\s+Koli\s+(\d+)/i);
-    if(colaM2){const miktar=parseInt(colaM2[2])*parseInt(colaM2[3]);results.push({ad:colaM2[1].trim().toUpperCase(),miktar,birim:'Adet',tarih});return;}
-    // Obaşak format: "ÜRÜN ADI   120 Adet" veya "ÜRÜN ADI   15 Kg"
-    const obM=l.match(/^(.+?)\s{2,}(\d+(?:[.,]\d+)?)\s*(Adet|Kg|Lt|kg|lt|adet)/i);
-    if(obM){const miktar=parseFloat(obM[2].replace(',','.'));results.push({ad:obM[1].trim().toUpperCase(),miktar,birim:obM[3],tarih});return;}
-    // Genel: sayı + birim aynı satırda
-    const genM=l.match(/^(.{5,40}?)\s+(\d+(?:[.,]\d+)?)\s*(adet|kg|lt|koli)?$/i);
-    if(genM&&parseFloat(genM[2])>0){results.push({ad:genM[1].trim().toUpperCase(),miktar:parseFloat(genM[2].replace(',','.')),birim:genM[3]||'Adet',tarih});}
-  });
-  return{items:results,tarih};
-}
-function autoMapFatura(ad){
-  const a=ad.toUpperCase();
-  // Et / Köfte
-  if(/KÖFTE.*MİNİ|MİNİ.*KÖFTE|KÖFTE.*50|50.*KÖFTE|MİNİ.*50GR|50GR.*MİNİ/.test(a))return 0;
-  if(/KÖFTE.*JOKER|JOKER.*KÖFTE|KÖFTE.*85|85.*KÖFTE/.test(a))return 1;
-  if(/KÖFTE.*120|120.*KÖFTE|BURGER KÖFTE/.test(a)&&!/85|JOKER|150|SPECIAL|SPECİAL/.test(a))return 2;
-  if(/SPECIAL.*150|SPECİAL.*150|KÖFTE.*SPECIAL|KÖFTE.*SPECİAL/.test(a))return 4;
-  if(/KÖFTE.*150|150.*KÖFTE|DANA KÖFTE/.test(a)&&!/85|120|SPECIAL|SPECİAL/.test(a))return 3;
-  if(/KÖFTE|KIYMA|DANA/.test(a)&&!/JOKER|85|120|150|SPECIAL/.test(a))return 1;
-  // Tavuk
-  if(/TAVUK.*TENDER|TENDERS|TENDER.*TAVUK/.test(a))return 7;
-  if(/MINI TAVUK|MİNİ TAVUK/.test(a))return 5;
-  if(/TAVUK BURGER|BURGER.*TAVUK/.test(a))return 6;
-  // Ekmek — Obaşak
-  if(/MİNİ EKMEK|MINI EKMEK|MİNİ BUN|MINI BUN|SLIDER BUN|DOĞAL MİNİ|DOGAL MINI/.test(a))return 17;
-  if(/HAMBURGER EKMEK|BURGER BUN|80.?GR.*EKMEK|EKMEK.*80|MİNİ JOKER.*85|JOKER.*85.*GRAM|85.*GRAM/.test(a))return 16;
-  // Patates / Dondurulmuş
-  if(/PATATES|POM|MC.?CAIN|DONDURULMUŞ PATATES|FROZEN.*POTATO/.test(a))return 8;
-  // Füme
-  if(/FÜME|FUME|DİLİMLİ.*DANA|DANA.*DİLİMLİ|SUCUK|PASTIRMA/.test(a))return 14;
-  // Nugget
-  if(/NUGGET/.test(a))return 9;
-  // Soğan Halkası
-  if(/SOGAN HALKA|SOĞAN HALKA|ONION RING/.test(a))return 10;
-  // Stick Peynir
-  if(/STİCK.*PEYNİR|STICK.*PEYNIR|PEYNIR.*STİCK/.test(a))return 12;
-  // Kızartma Yağı
-  if(/FRITÖZ|FRITEUSE|FRITOZ|KIZARTMA.*YAĞ|YAĞ.*KIZARTMA|FRİTÖZ/.test(a))return 15;
-  // Maden yazanlar → soda grubu; diğer sular → atla
-  if(/MADEN/.test(a))return 19;
-  if(/KAYNAK SUYU|PRE\.KAY|SU.*40CL|SU\b|DAMLA|MN\.SADE/.test(a))return -1;
-  if(/FRUTTI|FRUTTİ/.test(a))return 19;
-  // Uludağ: 33CL içecekler → kutu
-  if(/LİMONATA.*33|EFS.*GAZOZ.*33|EFS.*PORT.*33|GAZOZ.*33CL/.test(a))return 18;
-  // Uludağ: 100CL → 1 litrelik
-  if(/LİMONATA.*100|EFS.*GAZOZ.*100|EFS.*PORT.*100/.test(a))return 20;
-  // İçecekler — 1 Litrelik önce kontrol et
-  if(/CC.*PET.*1[Ll]|CC PET 1|COCA.*COLA.*1[Ll]|PET.*1L|SPR.*PET.*1L|SPR.*1L|SPR PET1L/.test(a))return 20;
-  // Kutu/şişe (330ml, 300ml) → kutu içecekler
-  if(/CC\b|COLA|FANTA|FUSE|SCHWEPPES|CAPPY|COCA.COLA|RB300|KUTU.*330|330.*KUTU|FT\b|FT |\bSPR\b|SPR KUTU|SPRITE/.test(a)&&!/1[.,]?5|2[.,]?5|PET1L|PET 1L/.test(a))return 18;
-  // Soda, gazoz, maden suyu, damla
-  if(/SODA|GAZOZ|MEYVELİ SODA|MEYVELI/.test(a))return 19;
-  return -1;
-}
-function analizFatura(){
-  const text=document.getElementById('fatura-text').value.trim();
-  if(!text){toast('Fatura metnini yapıştırın');return;}
-  const{items,tarih}=parseFaturaLines(text);
-  if(!items.length){document.getElementById('fatura-sonuc').innerHTML='<div style="color:#e74c3c;font-size:13px;padding:10px">Ürün bulunamadı. Metni kontrol edin.</div>';return;}
-  faturaAnalizSonucu={items,tarih};
-  const urunSecenekleri=`<option value="-1">-- Atla --</option>`+appData.products.map((p,i)=>`<option value="${i}">${i+1}. ${p.name} (${p.birim})</option>`).join('');
-  let html=`<div style="background:#f0eaf6;border-radius:8px;padding:8px 12px;margin-bottom:10px;font-size:12px;font-weight:700;color:#8e44ad">📅 Tarih: ${tarih} — ${items.length} ürün algılandı</div><div style="border:1px solid #eee;border-radius:10px;overflow:hidden;margin-bottom:10px">`;
-  items.forEach((item,i)=>{
-    const autoSira=autoMapFatura(item.ad);
-    html+=`<div style="padding:10px 12px;border-bottom:1px solid #f5f5f5">
-      <div style="font-size:12px;font-weight:700;color:#333;margin-bottom:6px">${item.ad}</div>
-      <div style="display:flex;align-items:center;gap:8px;flex-wrap:wrap">
-        <input type="number" id="fmik-${i}" value="${item.miktar}" step="0.01" style="width:80px;padding:6px 8px;border:2px solid #eee;border-radius:6px;font-size:13px;font-weight:700;outline:none;text-align:center">
-        <span style="font-size:11px;color:#aaa">${item.birim}</span>
-        <span style="font-size:11px;color:#999">→</span>
-        <select id="fmap-${i}" style="flex:1;min-width:160px;padding:6px 8px;border:2px solid ${autoSira>=0?'#8e44ad':'#eee'};border-radius:6px;font-size:12px;outline:none">${urunSecenekleri}</select>
-      </div>
-    </div>`;
-    setTimeout(()=>{const s=document.getElementById(`fmap-${i}`);if(s)s.value=String(autoSira);},50);
-  });
-  html+=`</div><button onclick="uygulaFatura()" style="width:100%;padding:13px;background:#8e44ad;color:#fff;border:none;border-radius:10px;font-size:14px;font-weight:700;cursor:pointer">✅ Gelen Hanesine Ekle</button>`;
-  document.getElementById('fatura-sonuc').innerHTML=html;
-  items.forEach((_,i)=>{const s=document.getElementById(`fmap-${i}`);const a=autoMapFatura(items[i].ad);if(s)s.value=String(a);});
-}
-async function uygulaFatura(){
-  const{items,tarih}=faturaAnalizSonucu;
-  if(!items||!items.length)return;
-  let eklendi=0;
-  for(let i=0;i<items.length;i++){
-    const sira=parseInt(document.getElementById(`fmap-${i}`)?.value??'-1');
-    if(sira<0)continue;
-    const miktar=parseFloat(document.getElementById(`fmik-${i}`)?.value||'0');
-    if(!miktar)continue;
-    const p=appData.products[sira];
-    if(!p)continue;
-    const mevcutIdx=p.entries.findIndex(e=>e.tarih===tarih);
-    if(mevcutIdx>=0){
-      const eskiGelen=parseFloat(p.entries[mevcutIdx].gelen||'0');
-      p.entries[mevcutIdx].gelen=String(Math.round((eskiGelen+miktar)*100)/100);
-      if(p.entries[mevcutIdx].dbId){await sb.from('gunluk_girdiler').update({gelen:p.entries[mevcutIdx].gelen}).eq('id',p.entries[mevcutIdx].dbId);}
-    }else{
-      const oncekiKapanis=p.entries.length?p.entries[p.entries.length-1].kapanis||'':'';
-      const newEntry={gun:String(p.entries.length+1),tarih,acilis:oncekiKapanis,gelen:String(miktar),gelenIade:'',transfer:'',kapanis:'',mallara:'',zayi:'',odenmez:''};
-      p.entries.push(newEntry);
-      const row={user_id:currentUser.id,urun_sira:sira,gun:String(p.entries.length),tarih,acilis:oncekiKapanis||null,gelen:String(miktar),gelen_iade:null,transfer:null,kapanis:null,mallara_gore:null,zayi:null,odenmez:null};
-      const res=await sb.from('gunluk_girdiler').insert(row).select().single();
-      if(res.data)p.entries[p.entries.length-1].dbId=res.data.id;
-    }
-    eklendi++;
-  }
-  toast(`✅ ${eklendi} ürün "Gelen" hanesine eklendi (${tarih})`,3500);
-  closeFaturaModal();
-  selectedMonth=tarih.slice(0,7);
-  renderPage();
-}
 let satisAnalizSonucu={};
+let satisRaporTarih=null;
 function openSatisModal(){document.getElementById('satis-modal').classList.add('show');document.getElementById('analiz-sonuc').innerHTML='';document.getElementById('satis-text').value='';satisAnalizSonucu={};satisRaporTarih=null;}
 function closeSatisModal(){document.getElementById('satis-modal').classList.remove('show');}
 function parseSatisLines(text){const items=[];let cat='';text.split('\n').forEach(line=>{if(/^\s*\*/.test(line)){cat=line.replace(/[* ]/g,'').toUpperCase();return;}const m=line.match(/^(.+?)\s{2,}(\d+)\s+([\d.,]+)/);if(m){const adet=parseInt(m[2]);const tutar=parseFloat(m[3].replace('.','').replace(',','.'));const birimFiyat=adet>0?tutar/adet:0;items.push({ad:m[1].trim().toUpperCase(),adet,kat:cat,birimFiyat});}});return items;}
