--- a/index.html
+++ b/index.html
@@ -287,12 +287,17 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
   </div>
   <div id="drawer-overlay" onclick="closeDrawer()"></div>
   <div id="drawer">
-    <div id="drawer-header"><div class="brand">BRGR ENVANTERİ</div><button id="drawer-close" onclick="closeDrawer()">&#10005;</button></div>
+    <div id="drawer-header">
+      <div>
+        <div class="brand">BRGR ENVANTERİ</div>
+        <div id="drawer-sube-info" style="font-size:13px;font-weight:700;color:rgba(255,255,255,0.9);margin-top:2px"></div>
+        <div id="drawer-user-info" style="font-size:10px;color:rgba(255,255,255,0.55);margin-top:1px"></div>
+      </div>
+      <button id="drawer-close" onclick="closeDrawer()">&#10005;</button>
+    </div>
     <div id="drawer-search"><input type="text" id="search-input" placeholder="Ürün ara..." oninput="filterProducts()"></div>
     <div id="product-list"></div>
     <div class="drawer-footer">
-      <div class="drawer-footer-info" id="drawer-user-info"></div>
-      <div class="drawer-footer-info" id="drawer-sube-info" style="color:var(--orange);font-weight:700"></div>
       <button class="drawer-btn drawer-btn-orange" onclick="openSubeModal()">Şube Adını Değiştir</button>
       <button class="drawer-btn" style="background:#e67e22;color:#fff" onclick="setMinStok();closeDrawer()">⚠️ Min Stok Uyarısı Ayarla</button>
       <button class="drawer-btn" style="background:#2c3e50;color:#fff" onclick="printUrunRaporu()">📄 PDF / Yazdır</button>
@@ -395,7 +400,7 @@ async function addNewProduct(){const ad=prompt('Yeni ürün adı:');if(!ad||!ad.
 async function openSubeModal(){const profil=await loadProfil();const yeni=prompt('Yeni şube adı:',profil?.sube_adi||'');if(yeni&&yeni.trim()){await sb.from('sube_profiller').upsert({user_id:currentUser.id,sube_adi:yeni.trim()});document.getElementById('topbar-user').textContent=yeni.trim();document.getElementById('drawer-sube-info').textContent=yeni.trim();toast('Şube adı güncellendi');}}
 async function loadAllData(){const{data:urunler}=await sb.from('urunler').select('*').eq('user_id',currentUser.id).order('sira');const{data:girdiler}=await sb.from('gunluk_girdiler').select('*').eq('user_id',currentUser.id).order('tarih',{ascending:true});appData.products=(urunler||[]).map(u=>({id:u.id,sira:u.sira,name:u.ad,birim:u.birim||'Adet',koli:u.koli||'',adet:u.adet_koli||'',minStok:u.min_stok??null,birimFiyat:u.birim_fiyat||0,entries:(girdiler||[]).filter(g=>g.urun_sira===u.sira).map(g=>({dbId:g.id,gun:g.gun||'',tarih:g.tarih||'',acilis:g.acilis||'',gelen:g.gelen||'',gelenIade:g.gelen_iade||'',transfer:g.transfer||'',kapanis:g.kapanis||'',mallara:g.mallara_gore||'',zayi:g.zayi||'',odenmez:g.odenmez||'',not:g.gun_notu||''}))}))}
 async function initDefaultProducts(){const inserts=DEFAULT_PRODUCTS.map((p,i)=>({user_id:currentUser.id,sira:i,ad:p.name,birim:p.birim,koli:'',adet_koli:''}));await sb.from('urunler').upsert(inserts,{onConflict:'user_id,sira'});}
-async function openApp(){const ls=document.getElementById('loading-screen');if(ls){const elapsed=window._splashStart?Date.now()-window._splashStart:9999;const minShow=14000;const wait=Math.max(0,minShow-elapsed);await new Promise(r=>setTimeout(r,wait));ls.classList.add('fade-out');await new Promise(r=>setTimeout(r,800));}showScreen('app');const profil=await loadProfil();const subeAdi=profil?.sube_adi||currentUser.email;document.getElementById('topbar-user').textContent=subeAdi;document.getElementById('drawer-user-info').textContent=currentUser.email;document.getElementById('drawer-sube-info').textContent=subeAdi;setSyncIcon('ok');if(isAdmin){document.getElementById('topbar-user').innerHTML=subeAdi+' <span class="admin-badge">ADMİN</span>';}renderSidebar();if(isAdmin)renderAdminPanel();else renderPage();}
+async function openApp(){const ls=document.getElementById('loading-screen');if(ls){const elapsed=window._splashStart?Date.now()-window._splashStart:9999;const minShow=14000;const wait=Math.max(0,minShow-elapsed);await new Promise(r=>setTimeout(r,wait));ls.classList.add('fade-out');await new Promise(r=>setTimeout(r,800));}showScreen('app');const profil=await loadProfil();const subeAdi=profil?.sube_adi||currentUser.email;document.getElementById('topbar-user').textContent=subeAdi;document.getElementById('drawer-sube-info').textContent=subeAdi;document.getElementById('drawer-user-info').textContent=currentUser.email;setSyncIcon('ok');if(isAdmin){document.getElementById('topbar-user').innerHTML=subeAdi+' <span class="admin-badge">ADMİN</span>';}renderSidebar();if(isAdmin)renderAdminPanel();else renderPage();}
 function setSyncIcon(state){const el=document.getElementById('sync-indicator');if(state==='ok')el.textContent='☁️';else if(state==='saving')el.textContent='🔄';else if(state==='err')el.textContent='⚠️';}
 function toggleDrawer(){document.getElementById('drawer').classList.toggle('open');document.getElementById('drawer-overlay').classList.toggle('open');}
 function closeDrawer(){document.getElementById('drawer').classList.remove('open');document.getElementById('drawer-overlay').classList.remove('open');}
