ekle butonu veri gir olarak degistirildi

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
       <option value="Adet">Adet</option><option value="Kg">Kg</option>
       <option value="Lt">Lt</option><option value="Paket">Paket</option><option value="Kutu">Kutu</option>
     </select>
-    <button class="top-btn top-btn-add" onclick="toggleAddForm()">+ Ekle</button>
+    <button class="top-btn top-btn-add" onclick="toggleAddForm()">+ Veri Gir</button>
     <button class="top-btn top-btn-menu" onclick="window.print()" title="Yazdır">🖨</button>
   </div>
   <div id="drawer-overlay" onclick="closeDrawer()"></div>
