--- a/index.html
+++ b/index.html
@@ -287,7 +287,10 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
       <span id="product-name-display">Ürün Seçin</span>
       <span id="topbar-sub" style="font-size:10px;color:#ffb380">Ada tıklayarak değiştir</span>
     </div>
-    <div id="topbar-user" title="Oturum bilgisi"></div>
+    <div style="display:flex;flex-direction:column;align-items:flex-end;flex-shrink:0;max-width:110px">
+      <span style="font-size:10px;font-weight:900;color:#FFB800;letter-spacing:1px;white-space:nowrap">ERCAN BRGR</span>
+      <span id="topbar-user" title="Oturum bilgisi" style="font-size:9px;color:#ffb380;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;max-width:110px"></span>
+    </div>
     <span id="sync-indicator" title="Senkronizasyon durumu">☁️</span>
     <select id="topbar-birim" onchange="saveBirim()" title="Birim">
       <option value="Adet">Adet</option><option value="Kg">Kg</option>
