--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ body{font-family:'Segoe UI',Arial,sans-serif;background:#f0f2f5;min-height:100vh
   .product-item{padding:10px 12px!important;font-size:13px!important}
   .product-item:hover{background:rgba(255,150,50,0.15)!important;cursor:pointer}
 }
+#content::before{content:'ERCAN\ABRGR';position:fixed;bottom:20px;right:20px;font-size:52px;font-weight:900;line-height:0.85;color:rgba(232,57,10,0.06);pointer-events:none;z-index:0;letter-spacing:2px;text-align:right;white-space:pre}
 @media(min-width:600px){.stats-row{grid-template-columns:repeat(4,1fr)}}
 .stat-card{background:#fff;border-radius:12px;padding:12px 14px;border-left:4px solid var(--orange);box-shadow:0 1px 4px rgba(0,0,0,0.06)}
 .stat-card .sl{font-size:10px;color:#999;font-weight:600;text-transform:uppercase}
@@ -303,9 +304,13 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
   <div id="drawer">
     <div id="drawer-header">
       <div>
-        <div class="brand">BRGR ENVANTERİ</div>
-        <div id="drawer-sube-info" style="font-size:13px;font-weight:700;color:rgba(255,255,255,0.9);margin-top:2px"></div>
-        <div id="drawer-user-info" style="font-size:10px;color:rgba(255,255,255,0.55);margin-top:1px"></div>
+        <div class="brand" style="line-height:1;padding:2px 0">
+          <div style="font-size:13px;font-weight:900;color:#FFB800;letter-spacing:2px">ERCAN</div>
+          <div style="font-size:26px;font-weight:900;color:#E8390A;letter-spacing:1px;margin-top:-4px">BRGR</div>
+          <div style="font-size:9px;font-weight:700;color:rgba(255,255,255,0.5);letter-spacing:3px;margin-top:-2px">ENVANTER</div>
+        </div>
+        <div id="drawer-sube-info" style="font-size:12px;font-weight:700;color:rgba(255,255,255,0.9);margin-top:6px;border-top:1px solid rgba(255,255,255,0.1);padding-top:6px"></div>
+        <div id="drawer-user-info" style="font-size:10px;color:rgba(255,255,255,0.45);margin-top:1px"></div>
       </div>
       <button id="drawer-close" onclick="closeDrawer()">&#10005;</button>
     </div>
